--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/enextus/javascript/issues"
   },
-  "homepage": "https://github.com/enextus/javascript#readme"
+  "homepage": "https://github.com/enextus/javascript#readme",
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-google": "^0.12.0"
+  }
 }
