--- a/package.json
+++ b/package.json
@@ -17,7 +17,13 @@
   },
   "homepage": "https://github.com/enextus/javascript#readme",
   "devDependencies": {
-    "eslint": "^5.16.0",
-    "eslint-config-google": "^0.12.0"
+    "eslint": "^6.0.0-alpha.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-google": "^0.12.0",
+    "eslint-plugin-import": "^2.17.2"
+  },
+  "dependencies": {
+    "circular-json": "^0.3.3",
+    "updater-eslint": "^1.0.0"
   }
 }
